--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.1"
 djangorestframework = "^3.15.2"
 aiogram = "^3.13.0"
 django-apscheduler = "^0.6.2"
+telebot = "^0.0.5"
 
 
 [build-system]
